--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-
+  <script src="http://185.17.229.168/docson/widget.js" data-schema="http://185.17.229.168/docson/examples/example.json"></script>
   </head>
   <body>
   <p>teste</p>
