--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
   </head>
   <body>
   <p>teste</p>
+  <table>
+  <td><tr><script src="http://185.17.229.168/docson/widget.js" data-schema="http://185.17.229.168/docson/examples/example.json"></script>
+</tr><tr><script src="http://185.17.229.168/docson/widget.js" data-schema="http://185.17.229.168/docson/examples/example.json"></script>
+</tr>
+  </td>
+  </table>
   </body>
 </html>
